fix spacing

--- a/pathify/src/pages/OtherProfile.css
+++ b/pathify/src/pages/OtherProfile.css
@@ -26,7 +26,7 @@
     font-style: italic;
     color: rgb(109, 109, 109);
     text-align: left;
-    margin-left: 3%;
+    margin-left: 4%;
 }
 
 .experience-container{
@@ -35,7 +35,7 @@
     margin-top: 30px;
     font-family: sans-serif;
     text-align: left;
-    margin-left: 6%;
+    margin-left: 5%;
 }
 
 .experience-container h4{
